--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,14 +11,29 @@
   z-index: 2;
 }
 
+.banner-header {
+  width: 75%;
+}
+
+.banner-search-bar {
+  display: flex;
+  padding: 0 10px;
+
+}
+
 .banner-homepage-left {
   // padding-top: 64px;
-  padding-bottom: 64px;
-  padding-left: 120px;
+  margin: auto;
+  background-image: url("https://images.pexels.com/photos/708392/pexels-photo-708392.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"), linear-gradient(rgba(134, 134, 134, 0.5), rgba(172, 172, 172, 0.5));
+     background-blend-mode: color;
+  height: 800px;
+  background-position: center;
+  background-size: cover;
+
   h2 {
     margin-bottom: 2rem;
-    text-align: left;
-    text-shadow: 0px 0px 4px lightgrey;
+    text-align: center;
+    text-shadow: 0px 0px 4px #686868;
   }
 }
 
@@ -45,9 +60,11 @@
   padding-bottom: 64px;
   padding-left: 120px;
   padding-right: 120px;
-  background: rgba(196, 196, 196, 0.49);
+  background: rgba(196, 196, 196, 0.3);
+  width: 100%;
   h2 {
     padding-bottom: 72px;
+    text-align: center;
   }
 }
 
@@ -56,6 +73,8 @@
   // display: grid;
   // grid-template-columns: 1fr 1fr 1fr;
   // grid-gap: 16px;
+  width: 75%;
+  margin: auto;
 }
 
 .header-homepage {
@@ -144,6 +163,7 @@
   background-color: white;
   h2 {
     padding-bottom: 72px;
+    text-align: center;
   }
   strong {
     color: $primary-color;
@@ -154,6 +174,37 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin-bottom: 57px;
+  height: 300px;
+}
+
+.review-card-items {
+  margin: auto;
+}
+
+.review-image {
+  width: 70%;
+  background-size: cover;
+  background-position: center;
+}
+
+.review-card-author {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.review-card-underline {
+  height: 1px;
+  background: rgba(196, 196, 196, 0.8);
+  width: 90%;
+  margin: auto;
+  margin-top: 8px;
+}
+
+.review-card-text {
+  margin: 15px 30px 15px 30px;
 }
 
 .avatar-large {
@@ -164,7 +215,7 @@
 }
 
 .review-card h3 {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   margin: 0;
   text-align: center;
@@ -205,6 +256,36 @@
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
     grid-template-columns: 1fr;
+  }
+
+  .reviews-section {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .review-image {
+    display: none;
+  }
+
+  .review-card {
+    height: auto;
+  }
+
+  .banner-homepage-right {
+    width: 0;
+  }
+
+  .banner-homepage-left {
+    padding-left: 0;
+  }
+
+  .banner-search-bar {
+      width: 75%;
+  }
+
+  .activities-section {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
