--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -13,6 +13,6 @@
         <br>
         <%= f.text_field :event_date, id:"basicDate", placeholder:"When will your event take place?", class:"create-field-date" %>
         <%= f.input :image, as: :file, class:"create-field-image" %>
-        <%= f.submit :submit, class:"create-field-submit btn-standard" %>
+        <%= f.submit "Create", class:"create-field-submit btn-standard" %>
     <% end %>
 </div>
