--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -6,32 +6,59 @@
 }
 
 .banner-grid{
-  grid-template-columns: 2fr 3fr;
   margin-right: -2rem;
-  z-index: 2;
+  display: flex;
 }
 
 .profile-top-left {
   padding-bottom: 64px;
   padding-left: 120px;
+  padding-right: 120px;
+
+  img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
+}
+
+.profile-top-right {
+  padding-bottom: 64px;
+  background-color: white;
   h2 {
     text-align: left;
     font-size: 40px;
     text-shadow: 0px 0px 4px lightgrey;
   }
   h3 {
-    font-size: 32px;
+    font-size: 16px;
     color: $secondary-color;
   }
   h4 {
     font-size: 16px;
     color: $secondary-color
   }
+  p {
+    padding: 8px;
+    font-size: 16px;
+  }
 }
 
-.profile-top-right {
-  padding-bottom: 64px;
-  background-color: white;
+.info-container {
+  display: flex;
+  align-items: baseline;
+  height: 32px;
+}
+
+.social-media-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.edit-profile-button {
+  margin-top: auto;
 }
 
 // profile-requests-section
