--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -1,19 +1,31 @@
 //scss file for profile show page
-
 // profile-top section
 .d-grid{
   display: grid;
 }
 
-.banner-grid{
+.banner-grid {
   grid-template-columns: 2fr 3fr;
   margin-right: -2rem;
   z-index: 2;
+  display: flex;
 }
 
 .profile-top-left {
   padding-bottom: 64px;
   padding-left: 120px;
+  padding-right: 120px;
+  img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+}
+
+.profile-top-right {
+  padding-bottom: 64px;
+  background-color: white;
   h2 {
     text-align: left;
     font-size: 40px;
@@ -21,17 +33,44 @@
   }
   h3 {
     font-size: 32px;
+    font-size: 16px;
     color: $secondary-color;
   }
   h4 {
     font-size: 16px;
     color: $secondary-color
   }
+  p {
+    padding: 8px;
+    font-size: 16px;
+  }
 }
 
 .profile-top-right {
   padding-bottom: 64px;
   background-color: white;
+}
+
+.info-container {
+  display: flex;
+  align-items: baseline;
+  height: 32px;
+}
+
+.social-media-container {
+  display: flex;
+  margin-top: 20px;
+  a {
+    padding: 5px 25px 5px 0;
+  }
+}
+
+.edit-profile-button {
+  margin-top: auto;
+
+  p {
+    padding: 0;
+  }
 }
 
 // profile-requests-section
@@ -45,29 +84,24 @@
     padding-bottom: 72px;
   }
 }
-
 .profile-cards {
   text-align: center;
   // display: grid;
   // grid-template-columns: 1fr 1fr 1fr;
   // grid-gap: 16px;
 }
-
 .header-profile {
   text-align: center;
   margin: 40px;
   font-size: $font-size-header;
   font-family: $header-font;
 }
-
 .con {
   padding: 0px 80px;
 }
-
 .card-body {
   padding: 0px;
 }
-
 .card-profile {
   border: none;
   border-radius: $standard-radius;
@@ -81,25 +115,21 @@
   &:hover {
     transform: scale(1.04);
   }
-
   .title-profile {
     text-align: center;
     font-size: 20px;
     padding: 0px 8px;
   }
-
   .card-img-profile {
     border-radius: $standard-radius $standard-radius 0 0;
     width: 100%;
     height: 120px;
     object-fit: cover;
   }
-
   .user-name-profile {
     margin-left: 8px;
     margin-top: 8px;
   }
-
   .user-social-icons {
     margin-right: -8px;
     margin-top: 8px;
@@ -108,11 +138,9 @@
       padding-right: 8px;
     }
   }
-
   .date-profile {
     margin-bottom: 40px;
   }
-
   .profile-pic-profile {
     text-align: center;
     img {
@@ -129,7 +157,6 @@
     }
   }
 }
-
 // profile-events-section
 .profile-events-section {
   padding-top: 64px;
